--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/user.png" alt="">
+                    <img src="images/user.jpg" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -169,7 +169,7 @@
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <p><i class="fa-solid fa-paper-plane"></i>ashwinikumar@attri.app</p>
-                    <p><i class="fa-solid fa-square-phone"></i> +91 8860555533</p>
+                    <!-- <p><i class="fa-solid fa-square-phone"></i> +91 8860555533</p> -->
                     <div class="social-cons">
                         <a href="https://www.instagram.com/ashwinikumarattri/"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/ashwinikumarattri/"><i class="fa-brands fa-linkedin"></i></a>
