android message added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <i class="fa-solid fa-bars" onclick="openMenu()"></i>
             </nav>
             <div class="header-text">
-                <p>React Native Developer</p>
+                <p>Android and React Native Developer</p>
                 <h1>Hi, I'm <span>Ashwini Kumar</span><br>Attri from India</h1>
             </div>
         </div>
