Resume and Summary changed

--- a/index.html
+++ b/index.html
@@ -43,22 +43,12 @@
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
             <p>
-              As a IT Analyst at Tata Consultancy Services (TCS), I have over
-              three years of experience in designing, developing, and deploying
-              consumer and enterprise applications for Android platforms. I have
-              a strong understanding and implementation knowledge of Android
-              native libraries and services, as well as React Native app
-              development. I am proficient in using Android Jetpack, Kotlin
-              Coroutines, and Dagger software tools, and have created a chat
-              application app using Android Jetpack Compose and Firebase, which
-              is available for download from the link. I am currently adding new
-              features to this app, and I am always eager to learn new
-              technologies and frameworks to enhance my skills and deliver
-              quality products. I hold a Bachelor of Technology degree in
-              Electrical and Electronics Engineering from Guru Gobind Singh
-              Indraprastha University (GGSIPU), and have received multiple
-              awards and certificates from TCS for my service and commitment,
-              continuous feedback, and teaching abilities.
+              Highly skilled Mobile App Developer with 4.5 years of experience
+              in developing and launching successful applications on both iOS
+              and Android platforms. Proven track record in increasing user
+              engagement and revenue through implementing automated testing
+              processes and collaborating with cross-functional teams to design
+              and implement new user interfaces.
             </p>
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('skills')">
@@ -88,9 +78,9 @@
             <!-- Experience -->
             <div class="tab-contents" id="experience">
               <ul>
-                <li><span>2024 - Current</span><br />IT Analyst at TCS</li>
+                <li><span>2020 - Current</span><br />IT ANALYST GRADE C2</li>
               </ul>
-              <ul>
+              <!-- <ul>
                 <li><span>2022 - 2024</span><br />System Engineer at TCS</li>
               </ul>
               <ul>
@@ -103,7 +93,7 @@
                   <span>2020 - 2021</span><br />Asst. System Engineer Trainee at
                   TCS
                 </li>
-              </ul>
+              </ul> -->
             </div>
 
             <!-- Education -->
@@ -237,7 +227,9 @@
                 ><i class="fa-brands fa-github"></i
               ></a>
             </div>
-            <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+            <a href="images/ASHWINI_KUMAR_ATTRI.pdf" download class="btn btn2"
+              >Download CV</a
+            >
           </div>
           <div class="contact-right">
             <form name="submit-to-google-sheet">
