--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="row">
           <div class="contact-left">
             <h1 class="sub-title">Contact Me</h1>
-            <p><i class="fa-solid fa-paper-plane"></i>ashwinikumar@attri.app</p>
+            <p><i class="fa-solid fa-paper-plane"></i>ashwinikumar@attri.dev</p>
             <!-- <p><i class="fa-solid fa-square-phone"></i> +91 8860555533</p> -->
             <div class="social-cons">
               <a href="https://www.instagram.com/ashwinikumarattri/"
