--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <i class="fa-solid fa-bars" onclick="openMenu()"></i>
         </nav>
         <div class="header-text">
-          <p>Android and React Native Developer</p>
+          <p>Application Developer</p>
           <h1>Hi, I'm <span>Ashwini Kumar</span><br />Attri from India</h1>
         </div>
       </div>
