Facebook and updated resume added

--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
               <a href="https://www.instagram.com/ashwinikumarattri/"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
+              <a href="https://www.facebook.com/ashwinikumarattri">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
               <a href="https://www.linkedin.com/in/ashwinikumarattri/"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
