Some changes done

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
             <p>
-              Highly skilled Mobile App Developer with 4.5 years of experience
-              in developing and launching successful applications on both iOS
-              and Android platforms. Proven track record in increasing user
-              engagement and revenue through implementing automated testing
+              Highly skilled Mobile App Developer with 4 years 9 months of
+              experience in developing and launching successful applications on
+              both iOS and Android platforms. Proven track record in increasing
+              user engagement and revenue through implementing automated testing
               processes and collaborating with cross-functional teams to design
               and implement new user interfaces.
             </p>
