--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
       <div class="container">
         <nav>
-          <img src="images/logo.png" alt="" class="logo" />
+          <img src="images/logo_.png" alt="" class="logo" />
           <ul id="sideMenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -38,7 +38,7 @@
       <div class="container">
         <div class="row">
           <div class="about-col-1">
-            <img src="images/user.jpg" alt="" />
+            <img src="images/user_.jpg" alt="" />
           </div>
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
@@ -214,10 +214,13 @@
         <div class="row">
           <div class="contact-left">
             <h1 class="sub-title">Contact Me</h1>
-            <p><i class="fa-solid fa-paper-plane"></i>contact@attri.dev</p>
+            <p>
+              <i class="fa-solid fa-paper-plane"></i
+              >ashwini.kumar.attri@gmail.com
+            </p>
             <!-- <p><i class="fa-solid fa-square-phone"></i> +91 8860555533</p> -->
             <div class="social-cons">
-              <a href="https://www.instagram.com/ashwinikumarattri/"
+              <a href="https://www.instagram.com/ashwini.kumar.attri/"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
               <a href="https://www.facebook.com/ashwinikumarattri">
@@ -230,9 +233,9 @@
                 ><i class="fa-brands fa-github"></i
               ></a>
             </div>
-            <a href="images/ASHWINI_KUMAR_ATTRI.pdf" download class="btn btn2"
+            <!-- <a href="images/ASHWINI_KUMAR_ATTRI.pdf" download class="btn btn2"
               >Download CV</a
-            >
+            > -->
           </div>
           <div class="contact-right">
             <form name="submit-to-google-sheet">
