--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
       <div class="container">
         <nav>
-          <img src="images/logo_.png" alt="" class="logo" />
+          <img src="images/logo_.jpeg" alt="" class="logo" />
           <ul id="sideMenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -38,7 +38,7 @@
       <div class="container">
         <div class="row">
           <div class="about-col-1">
-            <img src="images/user_.jpg" alt="" />
+            <img src="images/user_.jpeg" alt="" />
           </div>
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
