--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     </div>
 
     <!-- ----------contact------- -->
-    <div id="contact">
+    <!-- <div id="contact">
       <div class="container">
         <div class="row">
           <div class="contact-left">
@@ -263,7 +263,7 @@
           Ashwini Kumar Attri
         </p>
       </div>
-    </div>
+    </div> -->
 
     <script src="script.js"></script>
   </body>
