--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
       <div class="container">
         <nav>
-          <img src="images/logo_.jpeg" alt="" class="logo" />
+          <img src="images/logo.png" alt="" class="logo" />
           <ul id="sideMenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -209,7 +209,7 @@
     </div>
 
     <!-- ----------contact------- -->
-    <!-- <div id="contact">
+    <div id="contact">
       <div class="container">
         <div class="row">
           <div class="contact-left">
@@ -220,10 +220,10 @@
             </p>
             <!-- <p><i class="fa-solid fa-square-phone"></i> +91 8860555533</p> -->
             <div class="social-cons">
-              <a href="https://www.instagram.com/ashwini.kumar.attri/"
+              <!-- <a href="https://www.instagram.com/ashwini.kumar.attri/"
                 ><i class="fa-brands fa-instagram"></i
-              ></a>
-              <a href="https://www.facebook.com/ashwinikumarattri">
+              ></a> -->
+              <!-- <a href="https://www.facebook.com/ashwinikumarattri">
                 <i class="fa-brands fa-facebook"></i>
               </a>
               <a href="https://www.linkedin.com/in/ashwinikumarattri/"
@@ -231,7 +231,7 @@
               ></a>
               <a href="https://github.com/ashwinikumarattri"
                 ><i class="fa-brands fa-github"></i
-              ></a>
+              ></a> -->
             </div>
             <!-- <a href="images/ASHWINI_KUMAR_ATTRI.pdf" download class="btn btn2"
               >Download CV</a
@@ -263,7 +263,7 @@
           Ashwini Kumar Attri
         </p>
       </div>
-    </div> -->
+    </div>
 
     <script src="script.js"></script>
   </body>
